--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,21 @@
 #main {
+    height: 100vh;
+    background: linear-gradient(45deg, whitesmoke, slategray);
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    gap: 15px;
-    background: radial-gradient(circle at 0%, rgb(0, 255, 221), rgb(0, 204, 255));
-    width: 100%;
-    height: 100%;
+    overflow: hidden;
+}
+
+.centered_text_box {
+    width: 50vw;
+    height: 50vh;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .banner {
